# config/routes.rb
@@ -6,5 +6,9 @@ Rails.application.routes.draw do
   namespace :v1 do
     resources :products, only: [:create, :show, :update, :destroy]
     resources :stores, only: [:create, :show, :update, :destroy]
+    resources :stock_items, only: [:create]
+    patch 'stock_items', to: 'stock_items#update'
+    delete 'stock_items', to: 'stock_items#destroy'
+
   end
 end
