# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2020_05_22_101128) do
+ActiveRecord::Schema.define(version: 2020_05_22_112700) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -25,6 +25,17 @@ ActiveRecord::Schema.define(version: 2020_05_22_101128) do
     t.index ["deleted_at"], name: "index_products_on_deleted_at"
   end
 
+  create_table "stock_items", force: :cascade do |t|
+    t.bigint "product_id", null: false
+    t.bigint "store_id", null: false
+    t.integer "quantity", null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["product_id", "store_id"], name: "index_stock_items_on_product_id_and_store_id", unique: true
+    t.index ["product_id"], name: "index_stock_items_on_product_id"
+    t.index ["store_id"], name: "index_stock_items_on_store_id"
+  end
+
   create_table "stores", force: :cascade do |t|
     t.string "name", null: false
     t.string "address", null: false
@@ -34,4 +45,6 @@ ActiveRecord::Schema.define(version: 2020_05_22_101128) do
     t.index ["deleted_at"], name: "index_stores_on_deleted_at"
   end
 
+  add_foreign_key "stock_items", "products"
+  add_foreign_key "stock_items", "stores"
 end
